Update text for peer review buttons

--- a/config/locales/en-gb.yml
+++ b/config/locales/en-gb.yml
@@ -118,7 +118,7 @@ en-gb:
     no_available: This course has no available articles.
     remove: Remove
     reviewers: Reviewer(s)
-    review_other: Assign a review
+    review_other: Assign a peer review
     review_self: Review an article
     select: Select
   blocks:
